--- a/PortafolioWEBVerano2019/entry.html
+++ b/PortafolioWEBVerano2019/entry.html
@@ -22,7 +22,7 @@
                 <i class="fa fa-remove"></i>
             </a>
             <img src="./Resources/images/me.jpg" style="width:45%;" class="w3-round"><br><br>
-            <h4><b>PORTFOLIO</b></h4>
+            <h4><b>PORTFOLIO<br>Angelo Ramírez Ortega</b></h4>
             <p class="w3-text-grey">IC8057 - Introduction to Web Development</p>
         </div>
         <div class="w3-bar-block">
