--- a/PortafolioWEBVerano2019/index.html
+++ b/PortafolioWEBVerano2019/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-black.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="./style.css">
@@ -12,7 +13,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </head>
 
-<body class="w3-light-grey w3-content" style="max-width:1600px" onload="pageClick(1)"> 
+<body class="w3-light-grey w3-content" style="max-width:1600px" onload="pageClick(1)">
 
     <!-- Sidebar/menu -->
     <nav class="w3-sidebar w3-collapse w3-white w3-animate-left" style="z-index:3;width:300px;" id="mySidebar"><br>
@@ -22,7 +23,7 @@
                 <i class="fa fa-remove"></i>
             </a>
             <img src="./Resources/images/me.jpg" style="width:45%;" class="w3-round"><br><br>
-            <h4><b>PORTFOLIO</b></h4>
+            <h4><b>PORTFOLIO<br>Angelo Ramírez Ortega</b></h4>
             <p class="w3-text-grey">IC8057 - Introduction to Web Development</p>
         </div>
         <div class="w3-bar-block">
@@ -65,28 +66,49 @@
                 <div class="column right">
                     <img src="./Resources/images/web-development.png" style="width:100%;" class="w3-round"><br><br>
                 </div>
-
+            </div>
+            <h4><b>About Me</b></h4>
+            <div style="margin-left:16px;" class="row">
+                <div class="column right">
+                    <img src="./Resources/images/me2.jpg" style="width:100%;" class="w3-round"><br><br>
+                </div>
+                <div class="column left">
+                    <h5><b>Name & ID</b></h5>
+                    <p>Angelo Ramírez Ortega - 2017080055</p>
+                    <h5><b>University</b></h5>
+                    <p>Costa Rican Institute of Technology - Cartago, Costa Rica</p>
+                    <h5><b>Summary</b></h5>
+                    <p>I was born in Venezuela in 1999, my family and I moved to Costa Rica on 2008. I graduated from Saint Mary
+                        School on 2016 and have been studying Software Engineering since 2017. I'm one semester away from
+                        entering the professional practice and currently working in Intel at Belen, Heredia.
+                    </p>
+                </div>
             </div>
 
-            <h4><b>About Me</b></h4>
-            <p>Just me, myself and I, exploring the universe of unknownment. I have a heart of love and an interest of
-                lorem ipsum and mauris neque quam blog. I want to share my world with you. Praesent tincidunt sed tellus
-                ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.
-                Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies
-                congue gravida diam non fringilla.</p>
-            <hr>
-
             <h4>Technical Affinity</h4>
+            <p>I like to be knowledgeable in all aspects surrounding software development and software engineering.
+                I have found that my set of logical skills match better back-end related tasks; despite this, I'm
+                currently working half-time in Intel as a Web Analytics and Personalization student. This has
+                widely diversified my skillset. Some of my favorite software-related fields are:
+            </p>
             <!-- Progress bars / Skills -->
-            <p>Photography</p>
+            <h5>Computer Science</h5>
+            <p>Algorithm Analysis, Data Structures, Computer organization and architecture...</p>
             <div class="w3-grey">
                 <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:95%">95%</div>
             </div>
-            <p>Web Design</p>
+            <h5>Software Design</h5>
+            <p>SOLID principles, Design patterns, best practices... </p>
             <div class="w3-grey">
                 <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:85%">85%</div>
             </div>
-            <p>Photoshop</p>
+            <h5>Database theory</h5>
+            <p>Database modeling, normalization...</p>
+            <div class="w3-grey">
+                <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:80%">80%</div>
+            </div>
+            <h5>Project management</h5>
+            <p>Finding requirements, generating a plan and executing it as best as possible.</p>
             <div class="w3-grey">
                 <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:80%">80%</div>
             </div>
@@ -96,6 +118,53 @@
                         Resume</button>
                 </a>
             </p>
+
+            <!-- Work Row -->
+            <div class="w3-row-padding w3-padding-64 w3-theme-l1" id="work">
+
+                <div class="w3-quarter">
+                    <h2>Hobbies & interests</h2>
+                    <p>Some of the things I enjoy doing when I'm not programming!</p>
+                </div>
+
+                <div class="w3-quarter">
+                    <div class="w3-card w3-white">
+                        <img src="./Resources/images/rap.jpg" alt="Canserbero" style="width:100%" class="cover">
+                        <div class="w3-container">
+                            <h3>Music</h3>
+                            <p>I enjoy all types of music, I listen to music all day; when working, traveling or relaxing.
+                            My favorite genre is Rap but I love to mix it up! I also know how to play the guitar and I am freestyle amateur who likes to write
+                            music lyrics from time to time.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="w3-quarter">
+                    <div class="w3-card w3-white">
+                        <img src="./Resources/images/beach.jpg" alt="Beach" style="width:100%" class="cover">
+                        <div class="w3-container">
+                            <h3>Escaping from the city</h3>
+                            <p>Whenever we have a chance, me and my friends visit different waterfalls, beaches,
+                                mountains, you name it!
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="w3-quarter">
+                    <div class="w3-card w3-white">
+                        <img src="./Resources/images/food.jpg" alt="Food" style="width:100%">
+                        <div class="w3-container">
+                            <h3>Food</h3>
+                            <p>I love going to new places to try out food and live the experience of going to markets.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
             <hr>
 
             <div id="portfolio" class="w3-container">
@@ -113,14 +182,18 @@
                 <!-- First Photo Grid-->
                 <div class="w3-row-padding">
                     <div class="w3-third w3-container w3-margin-bottom">
-                        <img src="./Resources/files/homeworks/infograph.png" alt="Internet Evolution TimeLine" style="width:100%" class="w3-hover-opacity cover" onclick="openEntry('Internet Evolution TimeLine', 'infograph.png', 'png')">
+                        <img src="./Resources/files/homeworks/infograph.png" alt="Internet Evolution TimeLine"
+                            style="width:100%" class="w3-hover-opacity cover"
+                            onclick="openEntry('Internet Evolution TimeLine', 'infograph.png', 'png')">
                         <div class="w3-container w3-white">
                             <p><b>Internet Evolution Timeline</b></p>
                             <p>Infograph with a summarized history of the web.</p>
                         </div>
                     </div>
                     <div class="w3-third w3-container w3-margin-bottom">
-                        <img src="./Resources/images/pdf-placeholder.png" alt="Becoming a Full WEB Stack Dev" style="width:100%" onclick="openEntry('Becoming a Full WEB Stack Dev', 'fullstack.pdf', 'pdf')"
+                        <img src="./Resources/images/pdf-placeholder.png" alt="Becoming a Full WEB Stack Dev"
+                            style="width:100%"
+                            onclick="openEntry('Becoming a Full WEB Stack Dev', 'fullstack.pdf', 'pdf')"
                             class="w3-hover-opacity cover">
                         <div class="w3-container w3-white">
                             <p><b>Becoming a Full WEB Stack Dev</b></p>
@@ -128,42 +201,11 @@
                         </div>
                     </div>
                     <div class="w3-third w3-container">
-                        <img src="./Resources/images/placeholder.jpg" alt="Norway" style="width:100%"
+                        <img src="./Resources/images/placeholder.jpg" alt="HW" style="width:100%"
                             class="w3-hover-opacity cover">
                         <div class="w3-container w3-white">
-                            <p><b>Lorem Ipsum</b></p>
-                            <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae,
-                                ultricies congue gravida diam non fringilla.</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Second Photo Grid-->
-                <div class="w3-row-padding">
-                    <div class="w3-third w3-container w3-margin-bottom">
-                        <img src="./Resources/images/placeholder.jpg" alt="Norway" style="width:100%"
-                            class="w3-hover-opacity cover">
-                        <div class="w3-container w3-white">
-                            <p><b>Lorem Ipsum</b></p>
-                            <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae,
-                                ultricies congue gravida diam non fringilla.</p>
-                        </div>
-                    </div>
-                    <div class="w3-third w3-container w3-margin-bottom">
-                        <img src="./Resources/images/placeholder.jpg" alt="Norway" style="width:100%"
-                            class="w3-hover-opacity cover">
-                        <div class="w3-container w3-white">
-                            <p><b>Lorem Ipsum</b></p>
-                            <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae,
-                                ultricies congue gravida diam non fringilla.</p>
-                        </div>
-                    </div>
-                    <div class="w3-third w3-container">
-                        <img src="./Resources/images/placeholder.jpg" alt="Norway" style="width:100%"
-                            class="w3-hover-opacity cover">
-                        <div class="w3-container w3-white">
-                            <p><b>Lorem Ipsum</b></p>
-                            <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae,
-                                ultricies congue gravida diam non fringilla.</p>
+                            <p><b>Homework</b></p>
+                            <p>Coming soon...</p>
                         </div>
                     </div>
                 </div>
@@ -239,56 +281,6 @@
             </div>
         </div>
         <div w3-include-html="./footer.html"></div>
-
-     <!-- Footer -->
- <footer class="w3-container w3-padding-32 w3-dark-grey">
-        <div class="w3-row-padding">
-            <div class="w3-third">
-                <h3>FOOTER</h3>
-                <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae,
-                    ultricies congue gravida diam non fringilla.</p>
-                <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
-            </div>
-
-            <div class="w3-third">
-                <h3>BLOG POSTS</h3>
-                <ul class="w3-ul w3-hoverable">
-                    <li class="w3-padding-16">
-                        <img src="/w3images/workshop.jpg" class="w3-left w3-margin-right" style="width:50px">
-                        <span class="w3-large">Lorem</span><br>
-                        <span>Sed mattis nunc</span>
-                    </li>
-                    <li class="w3-padding-16">
-                        <img src="/w3images/gondol.jpg" class="w3-left w3-margin-right" style="width:50px">
-                        <span class="w3-large">Ipsum</span><br>
-                        <span>Praes tinci sed</span>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="w3-third">
-                <h3>POPULAR TAGS</h3>
-                <p>
-                    <span class="w3-tag w3-black w3-margin-bottom">Travel</span> <span
-                        class="w3-tag w3-grey w3-small w3-margin-bottom">New York</span> <span
-                        class="w3-tag w3-grey w3-small w3-margin-bottom">London</span>
-                    <span class="w3-tag w3-grey w3-small w3-margin-bottom">IKEA</span> <span
-                        class="w3-tag w3-grey w3-small w3-margin-bottom">NORWAY</span> <span
-                        class="w3-tag w3-grey w3-small w3-margin-bottom">DIY</span>
-                    <span class="w3-tag w3-grey w3-small w3-margin-bottom">Ideas</span> <span
-                        class="w3-tag w3-grey w3-small w3-margin-bottom">Baby</span> <span
-                        class="w3-tag w3-grey w3-small w3-margin-bottom">Family</span>
-                    <span class="w3-tag w3-grey w3-small w3-margin-bottom">News</span> <span
-                        class="w3-tag w3-grey w3-small w3-margin-bottom">Clothing</span> <span
-                        class="w3-tag w3-grey w3-small w3-margin-bottom">Shopping</span>
-                    <span class="w3-tag w3-grey w3-small w3-margin-bottom">Sports</span> <span
-                        class="w3-tag w3-grey w3-small w3-margin-bottom">Games</span>
-                </p>
-            </div>
-
-        </div>
-    </footer>
-        <!-- End page content -->
     </div>
     <script src="./pages.js"></script>
 </body>
