--- a/PortafolioWEBVerano2019/index.html
+++ b/PortafolioWEBVerano2019/index.html
@@ -201,13 +201,25 @@
                         </div>
                     </div>
                     <div class="w3-third w3-container">
-                        <img src="./Resources/images/placeholder.jpg" alt="HW" style="width:100%"
+                        <img src="./Resources/images/html.png" alt="HW" style="width:100%"  
+                        onclick="openEntry('Becoming a Full WEB Stack Dev', '../Practicas/PrCalendario/Calendario.html', 'html')"
+                            class="w3-hover-opacity cover">
+                        <div class="w3-container w3-white">
+                            <p><b>JS Calendar Practice</b></p>
+                            <p>Small Web App that displays a calendar with different search operations in JS.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="w3-row-padding">
+                    <div class="w3-third w3-container w3-margin-bottom">
+                        <img src="./Resources/images/placeholder.jpg" alt="Norway" style="width:100%"
                             class="w3-hover-opacity cover">
                         <div class="w3-container w3-white">
                             <p><b>Homework</b></p>
                             <p>Coming soon...</p>
                         </div>
                     </div>
+
                 </div>
             </div>
             <div class="page" id="page2">
