--- a/Practicas/PrCalendario/Calendario.html
+++ b/Practicas/PrCalendario/Calendario.html
@@ -7,13 +7,13 @@
         <script type="text/javascript" src="./Calendario.js"></script>
     </head>
     <body>
-        <h1>Mi Calendario-Angelo Ramirez Ortega</h1>
+        <h1 id="mical">Mi Calendario-Angelo Ramirez Ortega</h1>
         <br/>
         <br/>
         <div id="fechaactual"><i onclick="actualizar()">HOY: </i></div>
 
         <div id="calendario">
-            <div style="width: 395px;margin-left:auto;margin-right:auto;">
+            <div style="width: 595px;margin-left:auto;margin-right:auto;">
                 <div id="anterior" onclick="mesantes()"></div>
                 <div id="posterior" onclick="mesdespues()"></div>
                 <h2 id="titulos"></h2>
