--- a/Practicas/PrCalendario/Calendario.html
+++ b/Practicas/PrCalendario/Calendario.html
@@ -7,7 +7,7 @@
         <script type="text/javascript" src="./Calendario.js"></script>
     </head>
     <body>
-        <h1 id="mical">Mi Calendario-Angelo Ramirez Ortega</h1>
+        <h1 id="mical">Mi Calendario-Angelo Ramírez Ortega</h1>
         <br/>
         <br/>
         <div id="fechaactual"><i onclick="actualizar()">HOY: </i></div>
