--- a/PortafolioWEBVerano2019/index.html
+++ b/PortafolioWEBVerano2019/index.html
@@ -210,16 +210,25 @@
                         </div>
                     </div>
                 </div>
+                
                 <div class="w3-row-padding">
                     <div class="w3-third w3-container w3-margin-bottom">
-                        <img src="./Resources/images/placeholder.jpg" alt="Norway" style="width:100%"
+                        <img src="./Resources/images/html.png" alt="HW" style="width:100%"
+                        onclick="openEntry('Bootstrap', '../Practicas/PrLogin/login.html', 'html')"
                             class="w3-hover-opacity cover">
                         <div class="w3-container w3-white">
-                            <p><b>Homework</b></p>
-                            <p>Coming soon...</p>
+                            <p><b>Bootstrap User Control</b></p>
+                            <p>Creation of a prototype for sing in, sign up, and change password pages with validation.</p>
                         </div>
                     </div>
-
+                    <div class="w3-third w3-container w3-margin-bottom">
+                            <img src="./Resources/images/placeholder.jpg" alt="Norway" style="width:100%"
+                                class="w3-hover-opacity cover">
+                            <div class="w3-container w3-white">
+                                <p><b>Homework</b></p>
+                                <p>Coming soon...</p>
+                            </div>
+                        </div>
                 </div>
             </div>
             <div class="page" id="page2">
