--- a/Practicas/PrLogin/register.html
+++ b/Practicas/PrLogin/register.html
@@ -32,13 +32,15 @@
                             <div class="inline-form">
                                 <div class="form-group form-label-group left-form">
                                     <input type="text" id="name" class="form-control" placeholder="Email address"
-                                        required autofocus pattern="^[_A-z0-9]{1,}$" data-error="Please enter your name" required>
+                                        required pattern="^[A-Za-zÀ-ÖØ-öø-ÿ]{1,}$" data-error="Please enter your name"
+                                        required>
                                     <label for="name">First Name</label>
                                     <div style="margin-top:5px" class="help-block with-errors"></div>
                                 </div>
                                 <div class="form-group form-label-group right-form">
                                     <input type="text" id="lastnames" class="form-control" placeholder="Email address"
-                                        required autofocus pattern="^[_A-z0-9]{1,}$" data-error="Please enter your last name" required>
+                                        required pattern="^[A-Za-zÀ-ÖØ-öø-ÿ]{1,}$"
+                                        data-error="Please enter your last name" required>
                                     <label for="lastnames">Last name</label>
                                     <div style="margin-top:5px" class="help-block with-errors"></div>
                                 </div>
@@ -46,12 +48,13 @@
                             <div class="inline-form">
                                 <div class="form-group form-label-group left-form">
                                     <input type="date" id="inputDate" class="form-control" placeholder="Email address"
-                                        required autofocus>
+                                        required>
                                     <label for="inputDate">Birth Date</label>
                                 </div>
                                 <div class="form-group form-label-group right-form">
                                     <input type="text" id="inputPhone" class="form-control" placeholder="Phone number"
-                                        required autofocus pattern="^[0-9]{8,12}$" data-error="Please enter your phone number" required>
+                                        required pattern="^[0-9]{8,12}$"
+                                        data-error="Please enter your phone number" required>
                                     <label for="inputPhone">Phone</label>
                                     <div style="margin-top:5px" class="help-block with-errors"></div>
                                 </div>
@@ -59,7 +62,7 @@
 
                             <div class="form-group form-label-group">
                                 <input type="email" id="inputEmail" class="form-control" placeholder="Email address"
-                                    required autofocus data-error="Please enter a valid e-mail" required>
+                                    required data-error="Please enter a valid e-mail" required>
                                 <label for="inputEmail">Email address</label>
                                 <div style="margin-top:5px" class="help-block with-errors"></div>
 
@@ -68,24 +71,25 @@
                             <div class="form-group pass-show inline-form">
                                 <div class="form-group form-label-group left-form">
                                     <input type="text" id="inputUser" class="form-control" placeholder="Phone number"
-                                        required autofocus  data-error="Please enter your username" required>
+                                        required data-error="Please enter your username" required>
                                     <label for="inputUser">Username</label>
                                     <div style="margin-top:5px" class="help-block with-errors"></div>
                                 </div>
                                 <div class="form-group form-label-group right-form">
                                     <input type="password" id="inputPassword" class="form-control"
-                                        placeholder="Password" data-toggle="password" data-error="Password must include 1 uppercase, lowercase, number and be 8-15 characters long" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,}$" required>
+                                        placeholder="Password" data-toggle="password"
+                                        data-error="Password must include 1 uppercase, lowercase, number and be 8-15 characters long"
+                                        pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,}$" required>
                                     <label for="inputPassword">Password</label>
                                     <div style="margin-top:5px" class="help-block with-errors"></div>
                                 </div>
                             </div>
                             <button id="signup-btn" class="btn btn-lg btn-primary btn-block text-uppercase"
                                 type="submit">Sign up</button>
-                            <hr class="my-4">
-                            <p class="message">Already registered? <a href="login.html">Log in instead</a> or <a
-                                    href="password.html">Change password</a></p>
-
                         </form>
+                        <hr class="my-4">
+                        <p class="message">Already registered? <a href="login.html">Log in instead</a> or <a
+                                href="password.html">Change password</a></p>
                     </div>
                 </div>
             </div>
