--- a/Practicas/PrLogin/password.html
+++ b/Practicas/PrLogin/password.html
@@ -32,14 +32,16 @@
                             <div class="inline-form">
                                 <div class="form-group  form-label-group left-form">
                                     <input type="text" id="inputUser" class="form-control" placeholder="Username"
-                                    autofocus data-error="Please enter your username" required>
+                                    data-error="Please enter your username" required>
                                     <label for="inputUser">Username</label>
                                     <div style="margin-top:5px" class="help-block with-errors"></div>
                                 </div>
                                 <div class="form-group pass-show right-form">
                                     <div class="form-label-group">
                                         <input type="password" id="oldPassword" class="form-control"
-                                            placeholder="Password" data-toggle="password"  data-error="Please input your old password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,}$" required>
+                                            placeholder="Password" data-toggle="password"
+                                            data-error="Please input your old password"
+                                            pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,}$" required>
                                         <label for="oldPassword">Old password</label>
                                         <div style="margin-top:5px" class="help-block with-errors"></div>
                                     </div>
@@ -51,7 +53,9 @@
                                 <div class="form-group pass-show-left left-form">
                                     <div class="form-label-group">
                                         <input type="password" id="newPassword" class="form-control"
-                                            placeholder="Password" data-toggle="password"   data-error="Password must include 1 uppercase, lowercase, number and be 8-15 characters long" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,}$" required>
+                                            placeholder="Password" data-toggle="password"
+                                            data-error="Password must include 1 uppercase, lowercase, number and be 8-15 characters long"
+                                            pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,}$" required>
                                         <label for="newPassword">New password</label>
                                         <div style="margin-top:5px" class="help-block with-errors"></div>
                                     </div>
@@ -59,7 +63,9 @@
                                 <div class="form-group pass-show right-form">
                                     <div class="form-label-group">
                                         <input type="password" id="confirmPassword" class="form-control"
-                                            placeholder="Password" data-toggle="password"  data-error="Password must include 1 uppercase, lowercase, number and be 8-15 characters long" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,}$" required>
+                                            placeholder="Password" data-toggle="password"
+                                            data-error="Password must include 1 uppercase, lowercase, number and be 8-15 characters long"
+                                            pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)[a-zA-Z\d]{8,}$" required>
                                         <label for="confirmPassword">Confirm</label>
                                         <div style="margin-top:5px" class="help-block with-errors"></div>
                                     </div>
@@ -67,10 +73,10 @@
                             </div>
                             <button id="change-btn" class="btn btn-lg btn-primary btn-block text-uppercase"
                                 type="submit">Change password</button>
-                            <hr class="my-4">
-                            <p class="message">Forgot your password? <a href="password.html">Recover password</a> or
-                                <a href="login.html">Back to sign in</a></p>
                         </form>
+                        <hr class="my-4">
+                        <p class="message">Forgot your password? <a href="password.html">Recover password</a> or
+                            <a href="login.html">Back to sign in</a></p>
                     </div>
                 </div>
             </div>
