--- a/PortafolioWEBVerano2019/index.html
+++ b/PortafolioWEBVerano2019/index.html
@@ -235,19 +235,21 @@
                 <!-- First Photo Grid-->
                 <div class="w3-row-padding">
                     <div class="w3-third w3-container w3-margin-bottom">
-                        <img src="./Resources/images/placeholder.jpg" alt="Lab1" style="width:100%"
+                        <img src="./Resources/images/html.png" alt="Lab1" style="width:100%"
+                        onclick="openEntry('Bootstrap', '../Laboratorios/Lab2/OSM/index.html', 'html')"
                             class="w3-hover-opacity cover">
                         <div class="w3-container w3-white">
-                            <p><b>Lab 1</b></p>
-                            <p>Coming soon...</p>
+                            <p><b>Lab 2 code</b></p>
+                            <p>OpenStreetMap Lab code in action.</p>
                         </div>
                     </div>
                     <div class="w3-third w3-container w3-margin-bottom">
-                        <img src="./Resources/images/placeholder.jpg" alt="Norway" style="width:100%"
+                        <img src="./Resources/images/pdf-placeholder.png" alt="Norway" style="width:100%"
+                        onclick="openEntry('OpenStreetMap Lab Documentation.', 'Lab 2.pdf', 'pdf')"
                             class="w3-hover-opacity cover">
                         <div class="w3-container w3-white">
                             <p><b>Lab 2</b></p>
-                            <p>Coming soon...</p>
+                            <p>OpenStreetMap Lab Documentation.</p>
                         </div>
                     </div>
                     <div class="w3-third w3-container">
