--- a/PortafolioWEBVerano2019/index.html
+++ b/PortafolioWEBVerano2019/index.html
@@ -245,7 +245,7 @@
                     </div>
                     <div class="w3-third w3-container w3-margin-bottom">
                         <img src="./Resources/images/pdf-placeholder.png" alt="Norway" style="width:100%"
-                        onclick="openEntry('OpenStreetMap Lab Documentation.', 'Lab_2.pdf', 'pdf')"
+                        onclick="openEntry('OpenStreetMap Lab Documentation.', 'lab_2.pdf', 'pdf')"
                             class="w3-hover-opacity cover">
                         <div class="w3-container w3-white">
                             <p><b>Lab 2</b></p>
