--- a/PortafolioWEBVerano2019/index.html
+++ b/PortafolioWEBVerano2019/index.html
@@ -252,12 +252,13 @@
                             <p>OpenStreetMap Lab Documentation.</p>
                         </div>
                     </div>
-                    <div class="w3-third w3-container">
-                        <img src="./Resources/images/placeholder.jpg" alt="Norway" style="width:100%"
+                    <div class="w3-third w3-container w3-margin-bottom">
+                        <img src="./Resources/images/html.png" alt="Norway" style="width:100%"
+                        onclick="openEntry('Audiovisual walkthrough.', 'lab3_vid.mp4', 'mp4')"
                             class="w3-hover-opacity cover">
                         <div class="w3-container w3-white">
                             <p><b>Lab 3</b></p>
-                            <p>Coming soon...</p>
+                            <p>OpenStreetMap application with MySQL-NodeJS-Express.js backend and bootstrap frontend</p>
                         </div>
                     </div>
                 </div>
