--- a/PortafolioWEBVerano2019/index.html
+++ b/PortafolioWEBVerano2019/index.html
@@ -222,18 +222,103 @@
                         </div>
                     </div>
                     <div class="w3-third w3-container w3-margin-bottom">
-                            <img src="./Resources/images/placeholder.jpg" alt="Norway" style="width:100%"
-                                class="w3-hover-opacity cover">
-                            <div class="w3-container w3-white">
-                                <p><b>Homework</b></p>
-                                <p>Coming soon...</p>
-                            </div>
+                        <img src="./Resources/images/pdf-placeholder.png" alt="Becoming a Full WEB Stack Dev"
+                            style="width:100%"
+                            onclick="openEntry('Becoming a Full WEB Stack Dev', 'fullstack.pdf', 'pdf')"
+                            class="w3-hover-opacity cover">
+                        <div class="w3-container w3-white">
+                            <p><b>Becoming a Full WEB Stack Dev</b></p>
+                            <p>Learning the steps necessary to become a full-stack web developer.</p>
                         </div>
+                    </div>
+                    <div class="w3-third w3-container w3-margin-bottom">
+                        <img src="./Resources/images/pdf-placeholder.png" alt="Becoming a Full WEB Stack Dev"
+                            style="width:100%"
+                            onclick="openEntry('Apuntes Angular', 'apuntesangular.pdf', 'pdf')"
+                            class="w3-hover-opacity cover">
+                        <div class="w3-container w3-white">
+                            <p><b>Apuntes Angular</b></p>
+                            <p>Apuntes del taller de Angular.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="w3-row-padding">
+                    <div class="w3-third w3-container w3-margin-bottom">
+                        <img src="./Resources/images/pdf-placeholder.png" alt="Becoming a Full WEB Stack Dev"
+                            style="width:100%"
+                            onclick="openEntry('Apuntes Laravel', 'apunte_laravel_angeloramirez.pdf', 'pdf')"
+                            class="w3-hover-opacity cover">
+                        <div class="w3-container w3-white">
+                            <p><b>Apuntes Laravel</b></p>
+                            <p>Apuntes del taller de Laravel.</p>
+                        </div>
+                    </div>
+                    <div class="w3-third w3-container w3-margin-bottom">
+                        <img src="./Resources/images/pdf-placeholder.png" alt="Becoming a Full WEB Stack Dev"
+                            style="width:100%"
+                            onclick="openEntry('Apuntes Node', 'apuntes_angeloramirez_nodejs.pdf', 'pdf')"
+                            class="w3-hover-opacity cover">
+                        <div class="w3-container w3-white">
+                            <p><b>Apuntes NodeJS y express</b></p>
+                            <p>Apuntes del taller de NodeJS y express.</p>
+                        </div>
+                    </div>
+                    <div class="w3-third w3-container w3-margin-bottom">
+                        <img src="./Resources/images/pdf-placeholder.png" alt="Becoming a Full WEB Stack Dev"
+                            style="width:100%"
+                            onclick="openEntry('Apuntes Vue y TypeScript', 'apuntes_angeloramirez_vuejs.pdf', 'pdf')"
+                            class="w3-hover-opacity cover">
+                        <div class="w3-container w3-white">
+                            <p><b>Apuntes Vue y TypeScript</b></p>
+                            <p>Apuntes del taller de Vue y TypeScript.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="w3-row-padding">
+                    <div class="w3-third w3-container w3-margin-bottom">
+                        <img src="./Resources/images/pdf-placeholder.png" alt="Becoming a Full WEB Stack Dev"
+                            style="width:100%"
+                            onclick="openEntry('Apuntes React', 'apuntes_react_angeloramirez.pdf', 'pdf')"
+                            class="w3-hover-opacity cover">
+                        <div class="w3-container w3-white">
+                            <p><b>Apuntes React</b></p>
+                            <p>Apuntes del taller de React.</p>
+                        </div>
+                    </div>
+                    <div class="w3-third w3-container w3-margin-bottom">
+                        <img src="./Resources/images/pdf-placeholder.png" alt="Becoming a Full WEB Stack Dev"
+                            style="width:100%"
+                            onclick="openEntry('Apuntes Ruby on Rails', 'apuntes_rubyonrails_angeloramirez.pdf', 'pdf')"
+                            class="w3-hover-opacity cover">
+                        <div class="w3-container w3-white">
+                            <p><b>Apuntes Ruby on Rails</b></p>
+                            <p>Apuntes del taller de Ruby on Rails.</p>
+                        </div>
+                    </div>
+                    <div class="w3-third w3-container w3-margin-bottom">
+                        <img src="./Resources/images/pdf-placeholder.png" alt="Becoming a Full WEB Stack Dev"
+                            style="width:100%"
+                            onclick="openEntry('Apuntes Django', 'historiadjango.pdf', 'pdf')"
+                            class="w3-hover-opacity cover">
+                        <div class="w3-container w3-white">
+                            <p><b>Apuntes Django</b></p>
+                            <p>Apuntes del taller de Django.</p>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="page" id="page2">
                 <!-- First Photo Grid-->
                 <div class="w3-row-padding">
+                    <div class="w3-third w3-container w3-margin-bottom">
+                        <img src="./Resources/images/html.png" alt="Lab1" style="width:100%"
+                        onclick="openEntry('Login user management', 'lab1.zip', 'zip')"
+                            class="w3-hover-opacity cover">
+                        <div class="w3-container w3-white">
+                            <p><b>Lab 1 code</b></p>
+                            <p>Simple PHP user authentication program source code in compressed file.</p>
+                        </div>
+                    </div>
                     <div class="w3-third w3-container w3-margin-bottom">
                         <img src="./Resources/images/html.png" alt="Lab1" style="width:100%"
                         onclick="openEntry('Bootstrap', '../Laboratorios/Lab2/OSM/index.html', 'html')"
@@ -252,6 +337,9 @@
                             <p>OpenStreetMap Lab Documentation.</p>
                         </div>
                     </div>
+                </div>
+                <div class="w3-row-padding">
+                    
                     <div class="w3-third w3-container w3-margin-bottom">
                         <img src="./Resources/images/html.png" alt="Norway" style="width:100%"
                         onclick="openEntry('Audiovisual walkthrough.', 'lab3_vid.mp4', 'mp4')"
@@ -292,14 +380,14 @@
 
             <div class="page" id="page4">
                 <!-- First Photo Grid-->
-                <div class="w3-row-padding">
-                    <div class="w3-third w3-container w3-margin-bottom">
-                        <img src="./Resources/images/placeholder.jpg" alt="Norway" style="width:100%"
-                            class="w3-hover-opacity cover">
-                        <div class="w3-container w3-white">
-                            <p><b>Research 1</b></p>
-                            <p>Coming soon...</p>
-                        </div>
+                <div class="w3-third w3-container w3-margin-bottom">
+                    <img src="./Resources/images/pdf-placeholder.png" alt="Becoming a Full WEB Stack Dev"
+                        style="width:100%"
+                        onclick="openEntry('Investigacion AJAX', 'investigacionajax.pdf', 'pdf')"
+                        class="w3-hover-opacity cover">
+                    <div class="w3-container w3-white">
+                        <p><b>Investigación AJAX</b></p>
+                        <p>Investigación acerca de la tecnología web AJAX.</p>
                     </div>
                 </div>
             </div>
