--- a/PortafolioWEBVerano2019/index.html
+++ b/PortafolioWEBVerano2019/index.html
@@ -349,31 +349,27 @@
                             <p>OpenStreetMap application with MySQL-NodeJS-Express.js backend and bootstrap frontend</p>
                         </div>
                     </div>
-                </div>
-                <!-- Second Photo Grid-->
-                <div class="w3-row-padding">
                     <div class="w3-third w3-container w3-margin-bottom">
-                        <img src="./Resources/images/placeholder.jpg" alt="Norway" style="width:100%"
+                        <img src="./Resources/images/html.png" alt="Norway" style="width:100%"
+                            onclick="openEntry('Radius from a point.', 'lab4.zip', 'zip')"
                             class="w3-hover-opacity cover">
                         <div class="w3-container w3-white">
                             <p><b>Lab 4</b></p>
-                            <p>Coming soon...</p>
+                            <p>OpenStreetMap application with MySQL-NodeJS-Express.js backend and bootstrap frontend with an added functionality with react and points radius.</p>
                         </div>
                     </div>
-
                 </div>
             </div>
 
             <div class="page" id="page3">
                 <!-- First Photo Grid-->
-                <div class="w3-row-padding">
-                    <div class="w3-third w3-container w3-margin-bottom">
-                        <img src="./Resources/images/placeholder.jpg" alt="Norway" style="width:100%"
-                            class="w3-hover-opacity cover">
-                        <div class="w3-container w3-white">
-                            <p><b>Proyect 1</b></p>
-                            <p>Coming soon...</p>
-                        </div>
+                <div class="w3-third w3-container w3-margin-bottom">
+                    <img src="./Resources/images/pdf-placeholder.png" alt="Norway" style="width:100%"
+                    onclick="openEntry('El Foraneo Documentation.', 'docum.pdf', 'pdf')"
+                        class="w3-hover-opacity cover">
+                    <div class="w3-container w3-white">
+                        <p><b>El Foráneo</b></p>
+                        <p>Recipe social network application for students.</p>
                     </div>
                 </div>
             </div>
